<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="50sp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/details"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/workout"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/run"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/metrics"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/pictures"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight" />

</LinearLayout>