<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PersonalDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/details"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age:"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender:"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weight:"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Height:"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BMI:"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Body Fat %:"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_body_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/updateDetails"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/updateDetails"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/goBack"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorPrimaryLight" />
</LinearLayout>